
      - Adding support for tags. Thanks to Joe Johnston for the basic concept, and much of the implementation work.
      
      - Adding a utc_date method to post objects.
      
      - Fixing a bug that made `plerdall --init` fail if plerdall can't find a config file. (Thanks to Bo for the bug report.)
      
      - Fixing a bug that ignored any user-requested webmention-listener log level.

1.72 2018-12-09T16:51:27Z

      - Tweaking some internal bits so that Plerd sits better with CPAN's amazing and celebrated testing army. (Thanks to Slaven Rezic for advice and guidance.)

1.7 2018-11-05T00:58:38Z

      - Adding support for "dist"-style installation and configuration of Plerd, making it appropriate for distribution via CPAN.
      
      - Adding an --init command to plerdall. (Thanks to Rebecca Turner for the suggestion.)
      
      - Plerd now automatically generates a symbolic link from recent.html to index.html on blog publication.

1.601 2018-08-11

      - Fixing a bug that prevented the Webmention-receiving plerdwatcher process from accepting webmentions for posts created after it launched.

      - Adding a (commented-out) `<link rel="webmention [...] />` element to the set of sample templates. (Thanks to Karen Cravens for the bug report.)
      
      - Separating the display of replies versus uncategorized webmentions, in the sample templates.
      
      - Retroactively adding a bunch of entries to the 1.6 Changelog entry that I forgot about in the excitement of the Webmention stuff.

1.6   2018-08-05

      - Adding experimental support for Webmention sending, receiving, and display.
     
      - If a template fails to process, Plerd will now die with a meaningful error message.
     
      - Adding a post_with_url method to Plerd objects.
     
      - Adding Microformats2 metadata to the sample templates.

1.55  2018-03-07
