@@ -2,6 +2,10 @@ title: Metatags with image and alt
 image: http://blog.example.com/example.png
 image_alt: A lovely bunch of coconuts.
 
+<img src="image: http://blog.example.com/example.png" alt="A lovely bunch of coconuts." />
+
 This file sets up some attributes that should cause some social media tags to get created in the resulting HTML, under the right circumstances.
 
 Furthermore, it refers to a post-specific image. But it doesn't specify a description!
+
+It also leads with an image tag hanging out all by itself, which Plerd ought not to consider a paragraph of body text.
